Settings: Fix vertical spacing.
Removed the top margin of input-group css
 to prevent the double margins. Also fixed the
 default-language positioning, and maintained
margin consistency in organization settings.

Fixes #8890.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2073,7 +2073,6 @@ div.floating_recipient {
 
 .settings-section #default_language {
     text-decoration: none;
-    vertical-align: bottom;
 }
 
 .settings-section #default_language_modal table {
